[package]
name = "snuffy-probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "1.0"
redbpf-probes = "1.0"

[build-dependencies]
cargo-bpf = "1.0"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "snuffy"
path = "src/snuffy/main.rs"
required-features = ["probes"]
